syntax = "proto3";

package pb;

message CreateRifleRequest {
  Rifle rifle = 1;
}

message CreateRifleResponse {
  Rifle rifle = 1;
}

message ListRiflesRequest {
  uint32 page_size = 1;
  string page_token = 2;
}

message ListRiflesResponse {
  repeated Rifle rifles = 1;
  string next_page_token = 2;
}

message GetRifleRequest {
  int64 rifle_id = 1;
}

message GetRifleResponse {
  Rifle rifle = 1;
}

message Rifle {
  int64 rifle_id = 1;
  string name = 2;
  double sight_height = 3;
  double barrel_twist = 4;
  bool twist_direction_left = 5;
  double zero_range = 6;
}
