syntax = "proto3";

package pb;

message CreateScenarioRequest {
  Scenario scenario = 1;
}

message CreateScenarioResponse {
  Scenario scenario = 1;
}

message ListScenariosRequest {
  uint32 page_size = 1;
  string page_token = 2;
}

message ListScenariosResponse {
  repeated Scenario scenarios = 1;
  string next_page_token = 2;
}

message GetScenarioRequest {
  int64 scenario_id = 1;
}

message GetScenarioResponse {
  Scenario scenario = 1;
}

message Scenario {
  int64 scenario_id = 1;
  string name = 2;
  int64 environment_id = 3;
  int64 rifle_id = 4;
  int64 load_id = 5;
}
