syntax = "proto3";

package pb;

message SolveRequest {}

message SolveResponse {}
